--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<app-login-page></app-login-page>
 
-
-<router-outlet />
+<!-- <router-outlet /> -->
