--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-login-page></app-login-page>
-
-<!-- <router-outlet /> -->
+<app-navbar></app-navbar>
+<main class="min-h-screen bg-white dark:bg-gray-950 text-black dark:text-white p-4">
+    <router-outlet></router-outlet>
+  </main>
+ 
