--- a/src/app/pages/movie-detail/movie-detail.component.html
+++ b/src/app/pages/movie-detail/movie-detail.component.html
@@ -1,1 +1,12 @@
-<p>movie-detail works!</p>
+<div *ngIf="movie" class="max-w-4xl mx-auto p-6 bg-white dark:bg-gray-800 text-black dark:text-white shadow rounded">
+  <div class="flex flex-col md:flex-row gap-6">
+    <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" alt="{{ movie.title }}" class="rounded w-full md:w-1/3">
+
+    <div>
+      <h2 class="text-3xl font-bold mb-2">{{ movie.title }}</h2>
+      <p class="text-gray-400 mb-2">Fecha de estreno: {{ movie.release_date }}</p>
+      <p class="mb-4">{{ movie.overview }}</p>
+      <p class="font-bold">Valoración: {{ movie.vote_average }}/10</p>
+    </div>
+  </div>
+</div>
