--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <section class="py-8 px-4 max-w-6xl mx-auto">
   <h1 class="text-3xl font-bold mb-6 text-center text-gray-900 dark:text-white">Películas populares</h1>
+<app-filters [genres]="genres" (filterChanged)="applyFilters($event)"></app-filters>
 
   <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     
