--- a/src/app/shared/filters/filters.component.html
+++ b/src/app/shared/filters/filters.component.html
@@ -28,12 +28,13 @@
     </div>
 
     <!-- Ordenar por -->
-    <select [(ngModel)]="filters.sortBy" (change)="onFilterChange()"
-            class="w-full p-2 rounded border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-black dark:text-white">
+    <select [(ngModel)]="filters.sortBy" (change)="onFilterChange()" class="p-2 rounded bg-white dark:bg-gray-800 text-black dark:text-white border">
       <option value="popularity.desc">Popularidad ↓</option>
       <option value="popularity.asc">Popularidad ↑</option>
       <option value="vote_average.desc">Puntuación ↓</option>
+      <option value="vote_average.asc">Puntuación ↑</option>
       <option value="release_date.desc">Estreno ↓</option>
+      <option value="release_date.asc">Estreno ↑</option>
     </select>
     
     <button
