--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,4 +14,16 @@
       </a>
     </div>
   </div>
+  <div class="mt-6 flex justify-center items-center gap-4">
+  <button (click)="previousPage()" [disabled]="currentPage <= 1" class="px-4 py-2 bg-gray-700 text-white rounded hover:bg-gray-600">
+    ⬅ Anterior
+  </button>
+
+  <span class="text-white">Página {{ currentPage }}</span>
+
+  <button (click)="nextPage()" [disabled]="currentPage >= totalPages" class="px-4 py-2 bg-gray-700 text-white rounded hover:bg-gray-600">
+    Siguiente ➡
+  </button>
+</div>
+
 </section>
