--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,12 +1,12 @@
-<div class="max-w-sm mx-auto mt-10 p-6 bg-white dark:bg-gray-800 text-black dark:text-white shadow rounded">
+<div class="max-w-sm mx-auto mt-10 p-6 bg-gray-100 border border-gray-100 dark:border-none dark:bg-gray-800 text-black dark:text-white shadow-lg rounded">
   <h2 class="text-xl font-bold mb-4 text-center">Crear cuenta</h2>
 
-  <input [(ngModel)]="email" type="email" placeholder="Correo" class="w-full mb-2 p-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 rounded">
-  <input [(ngModel)]="password" type="password" placeholder="Contraseña" class="w-full mb-2 p-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 rounded">
+  <form (ngSubmit)="register()" class="space-y-4">
+    <input [(ngModel)]="email" name="email" type="email" placeholder="Email" required class="w-full mb-2 p-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 rounded"/>
+    <input [(ngModel)]="password" name="password" type="password" placeholder="Contraseña" required class="w-full mb-2 p-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 rounded"/>
 
-  <button (click)="register()" class="w-full bg-green-600 hover:bg-green-700 text-white p-2 rounded">
-    Registrarse
-  </button>
+    <button type="submit" class="w-full bg-green-600 hover:bg-green-700 text-white p-2 rounded">Registrarse</button>
+  </form>
 
   <p *ngIf="error" class="text-red-500 text-sm mt-2">{{ error }}</p>
   <p *ngIf="success" class="text-green-500 text-sm mt-2">{{ success }}</p>
